Bug 428279 - URL hints shortcuts don't work
Summary: URL hints shortcuts don't work
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-26 15:48 UTC by Martin Sandsmark
Modified: 2020-10-27 14:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Sandsmark 2020-10-26 15:48:05 UTC
Not entirely sure what has happened, but in current master pressing my URL hint shortcut makes them show up, but pressing the associated number doesn't open the URL.

I'll try to bisect to figure it out later.
Comment 1 Martin Sandsmark 2020-10-26 22:17:18 UTC
I just looked at the new url hints code, and I'm not entirely sure how it is supposed to work, it seems like it will always select the wrong one? And doesn't work at all with just one hint.
Comment 2 Martin Sandsmark 2020-10-26 22:24:51 UTC
Seems like there is some issue with URL filtering in general now, I suddenly got a URL hint (underlining) in the wrong place as well (can't reproduce it, though).
Comment 3 Bug Janitor Service 2020-10-26 22:31:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/258
Comment 4 Martin Sandsmark 2020-10-27 14:21:46 UTC
Git commit da3014859fb8428bed788cabed01476bf3cc6f72 by Martin T. H. Sandsmark.
Committed on 27/10/2020 at 12:27.
Pushed by hindenburg into branch 'master'.

Fix URL hint triggering

M  +2    -6    src/filterHotSpots/FilterChain.cpp

https://invent.kde.org/utilities/konsole/commit/da3014859fb8428bed788cabed01476bf3cc6f72