Fix URL hint triggering

BUG: 428279